[package]
name = "card-collection-price-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
async-trait = "0.1"
axum = "0.8"
colored = "3.1"
dotenv = "0.15"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.25"
uuid = { version = "1.21", features = ["serde"] }

[dev-dependencies]
mockall = "0.14"
wiremock = "0.6"

[[bin]]
name = "ccpt"
path = "src/ccpt/main.rs"
