[package]
name = "card-collection-price-tracker"
version = "0.1.0"
edition = "2024"

[lib]
name = "ccpt"
path = "src/ccpt/lib.rs"

[[bin]]
name = "ccpt"
path = "src/ccpt/main.rs"

[[bin]]
name = "generate-openapi"
path = "src/ccpt/generate_openapi.rs"

[dependencies]
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.12", features = ["query"] }
chrono = { version = "0.4", features = ["serde"] }
cron_tab = { version = "0.2", features = ["async"] }
csv = "1"
dotenv = "0.15"
jsonwebtoken = { git = "https://github.com/michaelcoll/jsonwebtoken", branch = "fix/headers-cant-accept-integer-field", features = ["rust_crypto"] }
ratelimit = "2.0"
reqwest = { version = "0.13", features = ["json"] }
scraper = "0.27"
sentry = { version = "0.48", features = ["tracing", "logs", "tower-axum-matched-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
ts-rs = "12.0"
utoipa = { version = "5", features = ["axum_extras", "yaml", "uuid"] }
uuid = { version = "1.23", features = ["serde", "v4"] }

[dev-dependencies]
cargo-husky = "1"
mockall = "0.15"
wiremock = "0.6"
